we fixed a little shit